--- a/public/style.css
+++ b/public/style.css
@@ -69,3 +69,41 @@ body {
     color:#000;
   }
   
+  .navbar {
+    display: flex;
+    align-items: center; ;
+  }
+  .nav-links {
+    display: flex;
+    width: 100%;
+  }
+  .logo a {
+display: inline-block; 
+width: 30px; 
+height: 30px; 
+background-color: black;
+border-radius: 50%; 
+text-decoration: none; 
+}
+
+
+.logo a:hover {
+background-color: #333;
+cursor: pointer; 
+}
+
+  ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  li a {
+    text-decoration: none   ;
+    color: #000; 
+    padding: 10px; 
+  }
+
+  li a:hover {
+    font-weight: bold;
+  }
